[metadata]
name = ansible-parallel
# Format is YYYY.MM.DD (https://calver.org/)
version = 2020.10.22
description = Run ansible playbooks in parallel.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/meltygroup/ansible-parallel
license = MIT License
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
py_modules = ansible_parallel
python_requires = >= 3.6

[options.entry_points]
console_scripts = ansible-parallel=ansible_parallel:main
